Fixed section spacing + fontsizes. Styled buttons

--- a/styles.css
+++ b/styles.css
@@ -129,7 +129,7 @@ a {
 
 .hero-section {
     width: 100%;
-    background: linear-gradient(to bottom, rgba(0,0,0, 1) 50%, rgba(0,0,0, 0.5));
+    background: linear-gradient(to bottom, rgba(0,0,0, 1) 30%, rgba(0,0,0, 0.5));
     color: white;
     padding: 1rem 12rem 4rem 12rem;
     justify-content: center;
@@ -150,7 +150,7 @@ a {
 }
 
 .hero-subtext {
-    font-size: 1.1rem;
+    font-size: 1.5rem;
 }
 
 .hero-image {
@@ -166,6 +166,7 @@ a {
   align-items: center;
   justify-content: center;
   padding: 15px; 
+  margin-left: 1rem;
   border-radius: 3px;
   box-shadow: inset 0 0 14px 14px black, inset 0 0 2px 3px black;
   background: linear-gradient(to bottom right, rgba(0,0,255, 0.9), rgba(238,130,238, 0.7));
@@ -182,14 +183,16 @@ a {
     margin-top: 1rem;
 }
 
+
 .testimonials-section {
-    background: rgba(0,0,0, 0.9);
+    background: linear-gradient(to bottom, rgba(5,0,5, 0.9), rgba(5,0,5, 0.3));
     color: white;
     border-radius: 9px;
     flex-direction: column;
     text-align: center;
-    margin: 6rem;
+    margin: 14rem 6rem;
     padding: 1rem 0;
+    box-shadow: inset 0 0 5px rgba(238,130,238, 0.7);
 }
 
 .testimonial-cards-wrapper {
@@ -209,6 +212,10 @@ a {
     flex: 1;
     justify-content: center;
     align-items: center;
+}
+
+.testimonial-card.darker {
+    background: rgba(5,0,5, 0.95);
 }
 
 .testimonial-card > img {
@@ -248,10 +255,37 @@ a {
 .cta-section {
     background: rgba(10,10,10, 0.9);
     color: white;
-    justify-content: space-between;
-    margin: 5rem 0 0 0;
+    justify-content: center;
+    margin-top: 14rem;
     padding: 2.5rem 5rem;
     border-radius: 6px;
+}
+
+.cta-button {
+    color: white;
+    background: rgba(5,0,5, 0.95);
+    border: 1px solid white;
+    padding: 1rem 2rem;
+    border-radius: 4px;
+    box-shadow: inset 0 0 5px white;
+    max-width: 10rem;
+    max-height: 5rem;
+}
+
+.cta-button:focus-within,
+.cta-button:hover {
+    color: white;
+    background: rgba(5,0,5, 0.95);
+    border: 1px solid white;
+    padding: 1rem 2rem;
+    border-radius: 4px;
+    box-shadow: inset 0 0 5px white;
+    max-width: 10rem;
+}
+
+.cta-header {
+    font-family: 'Press Start 2P';
+    font-size: 18px;
 }
 
 .bg-text-image {
@@ -261,9 +295,10 @@ a {
     width: 100vw;
     top: 0;
     left: 0;
-    font-size: 14px;
+    font-size: 16px;
     font-weight: 600;
     white-space: pre-wrap;
+    text-overflow: clip;
     background-image: linear-gradient(to bottom, rgba(50,50,255, 1) 20%, rgba(238,130,238, 1)); 
     background-size: cover;
     background-repeat: no-repeat;
